# sense8

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
apps/sense8_viewer/: CMakeLists.txt  main.cpp
apps/sense8_vio_main/: CMakeLists.txt  main.cpp
core/common/: CMakeLists.txt
core/common/include/sense8/common/: version.hpp
core/common/src/: version.cpp
core/io/: CMakeLists.txt
core/io/include/sense8/io/: euroc_dataset.hpp  replay_cursor.hpp  sensor_packets.hpp
core/io/src/: euroc_dataset.cpp  replay_cursor.cpp
datasets/: README.md
docs/: implementation_plan.md
scripts/: bootstrap_vcpkg.ps1  bootstrap_vcpkg.sh
tests/: CMakeLists.txt  common_version_test.cpp  euroc_dataset_test.cpp  replay_cursor_test.cpp
tests/data/euroc_sample/mav0/cam0/: data.csv
tests/data/euroc_sample/mav0/imu0/: data.csv
